--- a/src/main/resources/templates/manager/public/_menu.html
+++ b/src/main/resources/templates/manager/public/_menu.html
@@ -39,25 +39,11 @@
                 </ul>
             </dd>
         </dl>
-        <dl id="menu-member">
-            <dt><i class="Hui-iconfont">&#xe60d;</i> 会员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-            <dd>
-                <ul>
-                    <li><a href="member-list.html" title="会员列表">会员列表</a></li>
-                    <li><a href="member-del.html" title="删除的会员">删除的会员</a></li>
-                    <li><a href="member-level.html" title="等级管理">等级管理</a></li>
-                    <li><a href="member-scoreoperation.html" title="积分管理">积分管理</a></li>
-                    <li><a href="member-record-browse.html" title="浏览记录">浏览记录</a></li>
-                    <li><a href="member-record-download.html" title="下载记录">下载记录</a></li>
-                    <li><a href="member-record-share.html" title="分享记录">分享记录</a></li>
-                </ul>
-            </dd>
-        </dl>
         <dl id="menu-admin">
             <dt><i class="Hui-iconfont">&#xe62d;</i> 员工管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a href="/emp/list" title="员工列表">员工列表</a></li>
+                    <li><a href="/admin/emp/list" title="员工列表">员工列表</a></li>
                 </ul>
             </dd>
         </dl>
@@ -65,7 +51,7 @@
             <dt><i class="Hui-iconfont">&#xe61a;</i> 业主管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a href="/owner/list" title="业主列表">业主列表</a></li>
+                    <li><a href="/admin/owner/list" title="业主列表">业主列表</a></li>
                 </ul>
             </dd>
         </dl>
@@ -73,7 +59,15 @@
             <dt><i class="Hui-iconfont">&#xe62e;</i> 设施管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a href="/facility/list" title="系统设置">设施列表</a></li>
+                    <li><a href="/admin/facility/list" title="设施列表">设施列表</a></li>
+                </ul>
+            </dd>
+        </dl>
+        <dl id="menu-member">
+            <dt><i class="Hui-iconfont">&#xe60d;</i> 收费类型管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+            <dd>
+                <ul>
+                    <li><a href="/admin/feeType/list" title="收费类型列表">收费类型列表</a></li>
                 </ul>
             </dd>
         </dl>
