--- a/src/main/resources/templates/manager/emp-list.html
+++ b/src/main/resources/templates/manager/emp-list.html
@@ -10,11 +10,11 @@
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="Bookmark" href="favicon.ico">
     <link rel="Shortcut Icon" href="favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="../assets/static/h-ui/css/H-ui.min.css"/>
-    <link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/H-ui.admin.css"/>
-    <link rel="stylesheet" type="text/css" href="../assets/lib/Hui-iconfont/1.0.8/iconfont.css"/>
-    <link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/skin/default/skin.css" id="skin"/>
-    <link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/style.css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui/css/H-ui.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/style.css}"/>
     <!--/meta 作为公共模版分离出去-->
 
     <title>员工列表 </title>
@@ -40,7 +40,7 @@
     </nav>
     <div class="Hui-article">
         <article class="cl pd-20">
-            <form action="/emp/list" method="post">
+            <form action="/admin/emp/list" method="post">
                 <div class="text-c">
                     入职日期：
                     <input type="text" onfocus="WdatePicker({maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}'})"
@@ -81,7 +81,7 @@
                 </div>
             </form>
             <div class="cl pd-5 bg-1 bk-gray mt-20">
-                <span class="l"> <a href="javascript:;" onclick="admin_add('添加员工','/emp/doAdd','800','500')"
+                <span class="l"> <a href="javascript:;" onclick="admin_add('添加员工','/admin/emp/doAdd','800','500')"
                                     class="btn btn-primary radius"><i
                         class="Hui-iconfont">&#xe600;</i> 添加管理员</a> </span>
                 <span class="r">共有数据：<strong>54</strong> 条</span>
@@ -120,7 +120,7 @@
                     <td th:text="${#temporals.format(emp.createTime,'yyyy-MM-dd HH:mm:ss')}"></td>
                     <td class="td-manage"><a
                             title="编辑" href="javascript:;"
-                            th:onclick="|javascript:admin_edit('员工编辑','/emp/doUpdate?id=${emp.id}','1','800','500')|"
+                            th:onclick="|javascript:admin_edit('员工编辑','/admin/emp/doUpdate?id=${emp.id}','1','800','500')|"
                             class="ml-5"
                             style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a>
                         <a title="删除" href="javascript:;" th:onclick="|javascript:admin_del(this,'${emp.id}')|"
@@ -135,16 +135,16 @@
 </section>
 
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" src="../assets/lib/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="../assets/lib/layer/2.4/layer.js"></script>
-<script type="text/javascript" src="../assets/static/h-ui/js/H-ui.js"></script>
-<script type="text/javascript" src="../assets/static/h-ui.admin/js/H-ui.admin.page.js"></script>
+<script type="text/javascript" th:src="@{/assets/lib/jquery/1.9.1/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/layer/2.4/layer.js}"></script>
+<script type="text/javascript" th:src="@{/assets/static/h-ui/js/H-ui.js}"></script>
+<script type="text/javascript" th:src="@{/assets/static/h-ui.admin/js/H-ui.admin.page.js}"></script>
 <!--/_footer /作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="../assets/lib/My97DatePicker/4.8/WdatePicker.js"></script>
-<script type="text/javascript" src="../assets/lib/datatables/1.10.15/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="../assets/lib/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" th:src="@{/assets/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/datatables/1.10.15/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
     /*
         参数解释：
@@ -166,7 +166,7 @@
             //此处请求后台程序，下方是成功后的前台处理……
             $.ajax({
                 type: "POST",
-                url: "http://localhost:8380/emp/delete?id=" + id,
+                url: "http://localhost:8380/admin/emp/delete?id=" + id,
                 data: null,
                 success: function (result) {
                     if (result.code == 200) {
