--- a/src/main/resources/templates/manager/facility-list.html
+++ b/src/main/resources/templates/manager/facility-list.html
@@ -2,22 +2,22 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="utf-8">
-	<meta name="renderer" content="webkit|ie-comp|ie-stand">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport"
-		  content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
-	<meta http-equiv="Cache-Control" content="no-siteapp"/>
-	<link rel="Bookmark" href="favicon.ico">
-	<link rel="Shortcut Icon" href="favicon.ico"/>
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui/css/H-ui.min.css"/>
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/H-ui.admin.css"/>
-	<link rel="stylesheet" type="text/css" href="../assets/lib/Hui-iconfont/1.0.8/iconfont.css"/>
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/skin/default/skin.css" id="skin"/>
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/style.css"/>
-	<!--/meta 作为公共模版分离出去-->
+    <meta charset="utf-8">
+    <meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <link rel="Bookmark" href="favicon.ico">
+    <link rel="Shortcut Icon" href="favicon.ico"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui/css/H-ui.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/style.css}"/>
+    <!--/meta 作为公共模版分离出去-->
 
-	<title>设施列表 </title>
+    <title>设施列表 </title>
 </head>
 <body>
 <!--_header 作为公共模版分离出去-->
@@ -31,102 +31,135 @@
 <!--/_menu 作为公共模版分离出去-->
 
 <section class="Hui-article-box">
-	<nav class="breadcrumb"><a href="index.html"><i class="Hui-iconfont">&#xe67f;</i> 首页</a>
-		<span class="c-gray en">&gt;</span>
-		设施管理
-		<span class="c-gray en">&gt;</span>
-		设施列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a> </nav>
-	<div class="Hui-article">
-		<article class="cl pd-20">
-			<div class="text-c"> 
-				使用日期：
-				<input name="startTime" type="text" onfocus="WdatePicker({maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}'})" id="datemin" class="input-text Wdate" style="width:120px;">
-				-
-				<input name="endTime" type="text" onfocus="WdatePicker({minDate:'#F{$dp.$D(\'datemin\')}',maxDate:'%y-%M-%d'})" id="datemax" class="input-text Wdate" style="width:120px;">
-				<input type="text" class="input-text" style="width:120px" placeholder="名称" id="name" name="name">
-				<input type="text" class="input-text" style="width:150px" placeholder="地点" id="site" name="site">
-				<input type="text" class="input-text" style="width:120px" placeholder="数量" id="count" name="count">
-				<span class="select-box" style="width:75px">
+    <nav class="breadcrumb"><a href="index.html"><i class="Hui-iconfont">&#xe67f;</i> 首页</a>
+        <span class="c-gray en">&gt;</span>
+        设施管理
+        <span class="c-gray en">&gt;</span>
+        设施列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px"
+                href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a>
+    </nav>
+    <div class="Hui-article">
+        <article class="cl pd-20">
+			<form action="/admin/facility/list" method="post">
+            <div class="text-c">
+                使用日期：
+                <input name="start" type="text"
+                       onfocus="WdatePicker({maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}'})" id="datemin"
+                       class="input-text Wdate" style="width:120px;">
+                -
+                <input name="end" type="text"
+                       onfocus="WdatePicker({minDate:'#F{$dp.$D(\'datemin\')}',maxDate:'%y-%M-%d'})" id="datemax"
+                       class="input-text Wdate" style="width:120px;">
+                <input type="text" class="input-text" style="width:120px" placeholder="名称" id="name" name="name">
+                <input type="text" class="input-text" style="width:150px" placeholder="地点" id="site" name="site">
+                <input type="text" class="input-text" style="width:120px" placeholder="数量" id="count" name="count">
+                <span class="select-box" style="width:75px">
 				<select class="select" name="sort" size="1">
 					<option value="0" selected>倒序</option>
 					<option value="1">正序</option>
 				</select>
 				</span>
-				<button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i> 搜索</button>
-			</div>
-			<div class="cl pd-5 bg-1 bk-gray mt-20">
-				<span class="l"> <a href="javascript:;" onclick="admin_add('添加设施','facility-add.html','800','500')" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加设施</a> </span>
-				<span class="r">共有数据：<strong>54</strong> 条</span>
-			</div>
-			<table class="table table-border table-bordered table-bg">
-				<thead>
-					<tr>
-						<th scope="col" colspan="9">设施列表</th>
-					</tr>
-					<tr class="text-c">
-						
-						<th width="40">编号</th>
-						<th width="90">设施名称</th>
-						<th width="50">数量</th>
-						<th width="200">地点</th>
-						<th width="130">使用时间</th>
-						<th width="100">操作</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="text-c">
-						<td>1</td>
-						<td>摄像头</td>
-						<td>12</td>
-						<td>A座1区东面拐角处</td>
-						<td>2014-6-11 11:11:42</td>
-						<td class="td-manage"> <a title="编辑" href="javascript:;" onclick="admin_edit('设施编辑','facility-add.html','1','800','500')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-					</tr>
-				</tbody>
-			</table>
-		</article>
-	</div>
+                <button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i> 搜索
+                </button>
+            </div>
+			</form>
+            <div class="cl pd-5 bg-1 bk-gray mt-20">
+                <span class="l"> <a href="javascript:;" onclick="admin_add('添加设施','/admin/facility/doAdd','800','500')"
+                                    class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加设施</a> </span>
+                <span class="r">共有数据：<strong>54</strong> 条</span>
+            </div>
+            <table class="table table-border table-bordered table-bg">
+                <thead>
+                <tr>
+                    <th scope="col" colspan="9">设施列表</th>
+                </tr>
+                <tr class="text-c">
+
+                    <th width="40">编号</th>
+                    <th width="90">设施名称</th>
+                    <th width="50">数量</th>
+                    <th width="200">地点</th>
+                    <th width="130">使用时间</th>
+                    <th width="90">是否使用</th>
+                    <th width="100">操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="facility:${facilityList}" class="text-c">
+                    <td th:text="${facility.id}"></td>
+                    <td th:text="${facility.name}"></td>
+                    <td th:text="${facility.count}"></td>
+                    <td th:text="${facility.site}"></td>
+                    <td th:text="${#temporals.format(facility.startTime,'yyyy-MM-dd HH:mm:ss')}"></td>
+                    <td th:text="${facility.status}"></td>
+                    <td class="td-manage"><a title="编辑" href="javascript:;"
+											 th:onclick="|javascript:admin_edit('员工编辑','/admin/facility/doUpdate?id=${facility.id}','1','800','500')|"
+                                             class="ml-5" style="text-decoration:none"><i
+                            class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;"
+																	 th:onclick="|javascript:admin_del(this,'${facility.id}')|"
+                                                                     style="text-decoration:none"><i
+                            class="Hui-iconfont">&#xe6e2;</i></a></td>
+                </tr>
+                </tbody>
+            </table>
+        </article>
+    </div>
 </section>
 
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" src="../assets/lib/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="../assets/lib/layer/2.4/layer.js"></script>
-<script type="text/javascript" src="../assets/static/h-ui/js/H-ui.js"></script>
-<script type="text/javascript" src="../assets/static/h-ui.admin/js/H-ui.admin.page.js"></script>
+<script type="text/javascript" th:src="@{/assets/lib/jquery/1.9.1/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/layer/2.4/layer.js}"></script>
+<script type="text/javascript" th:src="@{/assets/static/h-ui/js/H-ui.js}"></script>
+<script type="text/javascript" th:src="@{/assets/static/h-ui.admin/js/H-ui.admin.page.js}"></script>
 <!--/_footer /作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="../assets/lib/My97DatePicker/4.8/WdatePicker.js"></script>
-<script type="text/javascript" src="../assets/lib/datatables/1.10.15/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="../assets/lib/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" th:src="@{/assets/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/datatables/1.10.15/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
-/*
-	参数解释：
-	title	标题
-	url		请求的url
-	id		需要操作的数据id
-	w		弹出层宽度（缺省调默认值）
-	h		弹出层高度（缺省调默认值）
-*/
-/*管理员-增加*/
-function admin_add(title,url,w,h){
-	layer_show(title,url,w,h);
-}
-/*管理员-删除*/
-function admin_del(obj,id){
-	layer.confirm('确认要删除吗？',function(index){
-		//此处请求后台程序，下方是成功后的前台处理……
-		
-		$(obj).parents("tr").remove();
-		layer.msg('已删除!',{icon:1,time:1000});
-	});
-}
-/*管理员-编辑*/
-function admin_edit(title,url,id,w,h){
-	layer_show(title,url,w,h);
-}
+    /*
+        参数解释：
+        title	标题
+        url		请求的url
+        id		需要操作的数据id
+        w		弹出层宽度（缺省调默认值）
+        h		弹出层高度（缺省调默认值）
+    */
+    /*管理员-增加*/
+    function admin_add(title, url, w, h) {
+        layer_show(title, url, w, h);
+    }
 
-</script> 
+    /*管理员-删除*/
+    function admin_del(obj, id) {
+        layer.confirm('确认要删除吗？', function (index) {
+            //此处请求后台程序，下方是成功后的前台处理……
+			$.ajax({
+				type: "POST",
+				url: "http://localhost:8380/admin/facility/delete?id=" + id,
+				data: null,
+				success: function (result) {
+					if (result.code == 200) {
+						$(obj).parents("tr").remove();
+						layer.msg('已删除! code=' + result.code, {icon: 1, time: 1000});
+					} else {
+						layer.msg('删除失败! code=' + result.code, {icon: 1, time: 1000});
+					}
+				},
+				error: function (e) {
+					layer.msg('删除!失败 m=' + e.code, {icon: 1, time: 1000});
+				}
+			});
+        });
+    }
+
+    /*管理员-编辑*/
+    function admin_edit(title, url, id, w, h) {
+        layer_show(title, url, w, h);
+    }
+
+</script>
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
 </html>
