--- a/src/main/resources/templates/manager/owner-add.html
+++ b/src/main/resources/templates/manager/owner-add.html
@@ -10,11 +10,11 @@
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="Bookmark" href="favicon.ico">
     <link rel="Shortcut Icon" href="favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="../assets/static/h-ui/css/H-ui.min.css"/>
-    <link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/H-ui.admin.css"/>
-    <link rel="stylesheet" type="text/css" href="../assets/lib/Hui-iconfont/1.0.8/iconfont.css"/>
-    <link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/skin/default/skin.css" id="skin"/>
-    <link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/style.css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui/css/H-ui.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/style.css}"/>
     <!--/meta 作为公共模版分离出去-->
 
     <title>添加员工</title>
@@ -72,23 +72,23 @@
 </article>
 
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" src="../assets/lib/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="../assets/lib/layer/2.4/layer.js"></script>
-<script type="text/javascript" src="../assets/static/h-ui/js/H-ui.js"></script>
-<script type="text/javascript" src="../assets/static/h-ui.admin/js/H-ui.admin.page.js"></script>
+<script type="text/javascript" th:src="@{/assets/lib/jquery/1.9.1/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/layer/2.4/layer.js}"></script>
+<script type="text/javascript" th:src="@{/assets/static/h-ui/js/H-ui.js}"></script>
+<script type="text/javascript" th:src="@{/assets/static/h-ui.admin/js/H-ui.admin.page.js}"></script>
 
 <!--/_footer /作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="../assets/lib/jquery.validation/1.14.0/jquery.validate.js"></script>
-<script type="text/javascript" src="../assets/lib/jquery.validation/1.14.0/validate-methods.js"></script>
-<script type="text/javascript" src="../assets/lib/jquery.validation/1.14.0/messages_zh.js"></script>
+<script type="text/javascript" th:src="@{/assets/lib/jquery.validation/1.14.0/jquery.validate.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/jquery.validation/1.14.0/validate-methods.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/jquery.validation/1.14.0/messages_zh.js}"></script>
 <script type="text/javascript">
     function insert() {
         //得到表单数据，序列化表单
         var owner = $("#form-admin-add").serialize();
         //使用ajax post提交方式 ，默认json数据/*[[@{/index/ajaxtest}]]*/
-        $.post("http://localhost:8380/owner/add", owner, function (data) {
+        $.post("http://localhost:8380/admin/owner/add", owner, function (data) {
             //回调回来的数据data
             if (data.code == '200') {
                 alert('响应码：' + data.code + " ,消息：" + data.message);
