--- a/src/main/resources/templates/manager/parking-list.html
+++ b/src/main/resources/templates/manager/parking-list.html
@@ -10,11 +10,11 @@
 	<meta http-equiv="Cache-Control" content="no-siteapp"/>
 	<link rel="Bookmark" href="favicon.ico">
 	<link rel="Shortcut Icon" href="favicon.ico"/>
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui/css/H-ui.min.css"/>
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/H-ui.admin.css"/>
-	<link rel="stylesheet" type="text/css" href="../assets/lib/Hui-iconfont/1.0.8/iconfont.css"/>
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/skin/default/skin.css" id="skin"/>
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/style.css"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui/css/H-ui.min.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/style.css}"/>
 	<!--/meta 作为公共模版分离出去-->
 
 	<title>车位列表 </title>
@@ -88,16 +88,16 @@
 </section>
 
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" src="../assets/lib/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="../assets/lib/layer/2.4/layer.js"></script>
-<script type="text/javascript" src="../assets/static/h-ui/js/H-ui.js"></script>
-<script type="text/javascript" src="../assets/static/h-ui.admin/js/H-ui.admin.page.js"></script>
+<script type="text/javascript" th:src="@{/assets/lib/jquery/1.9.1/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/layer/2.4/layer.js}"></script>
+<script type="text/javascript" th:src="@{/assets/static/h-ui/js/H-ui.js}"></script>
+<script type="text/javascript" th:src="@{/assets/static/h-ui.admin/js/H-ui.admin.page.js}"></script>
 <!--/_footer /作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="../assets/lib/My97DatePicker/4.8/WdatePicker.js"></script>
-<script type="text/javascript" src="../assets/lib/datatables/1.10.15/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="../assets/lib/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" th:src="@{/assets/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/datatables/1.10.15/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/lib/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
 /*
 	参数解释：
