--- a/src/main/resources/templates/manager/index.html
+++ b/src/main/resources/templates/manager/index.html
@@ -2,41 +2,43 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="utf-8">
-	<meta name="renderer" content="webkit|ie-comp|ie-stand">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-	<meta http-equiv="Cache-Control" content="no-siteapp" />
-	<LINK rel="Bookmark" href="favicon.ico" >
-	<LINK rel="Shortcut Icon" href="favicon.ico" />
+    <meta charset="utf-8">
+    <meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <LINK rel="Bookmark" href="favicon.ico">
+    <LINK rel="Shortcut Icon" href="favicon.ico"/>
 
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui/css/H-ui.min.css" />
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/H-ui.admin.css" />
-	<link rel="stylesheet" type="text/css" href="../assets/lib/Hui-iconfont/1.0.8/iconfont.css" />
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui/css/H-ui.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
 
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/skin/default/skin.css" id="skin" />
-	<link rel="stylesheet" type="text/css" href="../assets/static/h-ui.admin/css/style.css" />
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/style.css}"/>
 
-<!--/meta 作为公共模版分离出去-->
-<title>PMS</title>
-<link rel="stylesheet" type="text/css" href="../assets/static/css/adminIndex.css" />
+    <!--/meta 作为公共模版分离出去-->
+    <title>PMS</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/css/adminIndex.css}"/>
 </head>
 <body>
 <!--_header 作为公共模版分离出去-->
-<div th:include="manager/public/_header::header" >
+<div th:include="manager/public/_header::header">
 
 </div>
-<div th:replace="manager/public/_menu::pms_menu" >
+<div th:replace="manager/public/_menu::pms_menu">
 
 </div>
 <!--/_menu 作为公共模版分离出去-->
 <section class="Hui-article-box">
-	<nav class="breadcrumb"><i class="Hui-iconfont"></i> <a href="/" class="maincolor">首页</a> 
-		<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
-		<h1 class="text1">欢迎来到小区物业管理系统</h1>
-		<div class="we_img">
-			<img class="we_img" src="../assets/static/images/qiyiboshi.jpg"/>
-		</div>
+    <nav class="breadcrumb"><i class="Hui-iconfont"></i> <a href="/" class="maincolor">首页</a>
+        <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px"
+           href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+    <h1 style="margin-top: 50px;text-align: center;">欢迎来到小区物业管理系统</h1>
+    <div style="margin-top: 20px;text-align: center;">
+        <img style="width: 500px;height: 300px;" th:src="@{/assets/static/images/qiyiboshi.jpg}"/>
+    </div>
 </section>
 <!--_footer 作为公共模版分离出去-->
 <script type="text/javascript" src="../assets/lib/jquery/1.9.1/jquery.min.js"></script>
